--- a/kindle.ui
+++ b/kindle.ui
@@ -14,7 +14,7 @@
    <string>Kindle 下载助手</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="kindle.qrc">
+   <iconset resource="icon.qrc">
     <normaloff>:/icon/resource/kindle.png</normaloff>:/icon/resource/kindle.png</iconset>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
@@ -93,8 +93,8 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Microsoft YaHei UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Microsoft YaHei UI'; font-size:9pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -284,7 +284,7 @@ hr { height: 1px; border-width: 0; }
   </layout>
  </widget>
  <resources>
-  <include location="kindle.qrc"/>
+  <include location="icon.qrc"/>
  </resources>
  <connections/>
 </ui>
